--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,7 +7,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2.1.0
-
-          remove-haskell: 'true'
     - name: Enable BBR
-      run: 
+      run:  ls 
